--- a/backend/package.json
+++ b/backend/package.json
@@ -9,26 +9,29 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
+    "@types/node": "22.13.5",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
-    "aws-cdk": "2.176.0",
+    "aws-cdk": "2.1001.0",
     "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.25.0"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.731.1",
-    "@aws-sdk/lib-dynamodb": "^3.731.1",
+    "@aws-sdk/client-dynamodb": "^3.751.0",
+    "@aws-sdk/lib-dynamodb": "^3.751.0",
     "@types/aws-lambda": "^8.10.147",
-    "aws-cdk-lib": "^2.176.0",
+    "aws-cdk-lib": "^2.181.0",
     "constructs": "^10.4.2",
-    "esbuild": "^0.24.2"
+    "esbuild": "^0.25.0"
   }
 }
