--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@tanstack/react-query": "^5.64.2",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
